# colang

./: CLAUDE.md  Cargo.toml  simple_test.co  test_function_call.co  test_function_call.ll  test_optimizable.co  test_optimizable.ir  test_optimizable.ll  test_simple.co  test_simple.ir  test_simple.ll  test_simple_correct.co
examples/: hello_world.co
prompts/: HISTORY-major.md  SYSTEM.md  about.md
src/: main.rs
src/ast/: decl.rs  expr.rs  mod.rs  node.rs  stmt.rs  types.rs  visitor.rs
src/codegen/: debug.rs  llvm.rs  mod.rs  target.rs
src/ir/: basic_block.rs  builder.rs  function.rs  instruction.rs  mod.rs  optimizer.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: error.rs  mod.rs  parser.rs
src/semantics/: error.rs  mod.rs  ownership.rs  symbol_table.rs  type_checker.rs
src/std/: collections.rs  io.rs  mod.rs  prelude.rs  result.rs  string.rs  thread.rs
src/util/: debug.rs  diagnostic.rs  error.rs  intern.rs  mod.rs  span.rs
tests/semantic/: functions.co  scopes.co  type_inference.co  undefined_vars.co
