[package]
name = "colang"
version = "0.1.0"
edition = "2021"
authors = ["COLANG Development Team"]
description = "A modern systems programming language with explicit ownership semantics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colang/colang"
keywords = ["compiler", "systems", "programming-language", "memory-safety"]
categories = ["compilers", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
logos = "0.13"
thiserror = "1.0"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
pretty_assertions = "1.0"

[[bin]]
name = "colang"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
